--- a/Project.html
+++ b/Project.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<link href="next.png" rel="icon">
+		<link rel="icon">
 		<title>Comics World</title>
 		<link href="Headerstyle.css" type="text/css" rel="stylesheet">
 		<link href="Projectstyle.css" type="text/css" rel="stylesheet">
